# m2dev-client-src

./: DOCUMENTATION_INDEX.md  FREETYPE_FONT_CONFIG.md  FREETYPE_QUICK_REFERENCE.md  FreeTypeFont.txt.example
src/AudioLib/: MaSoundInstance.cpp  MaSoundInstance.h
src/EterLib/: CMakeLists.txt  GrpBase.h  GrpTextInstance.cpp  GrpTextInstance.h  ImGuiManager.cpp  ImGuiManager.h
src/EterPythonLib/: PythonWindow.cpp  PythonWindow.h
src/UserInterface/: CMakeLists.txt  Locale.cpp  PythonApplication.cpp  PythonNetworkStreamPhaseGame.cpp  UserInterface.cpp
